fix overflows

--- a/src/app/views/pages/panel/layouts/admin/admin.scss
+++ b/src/app/views/pages/panel/layouts/admin/admin.scss
@@ -5,7 +5,6 @@ main.company {
 
   .left {
     flex: 1 1 68%;
-    padding-inline-end: 0.5rem;
 
     .company-header-bar {
       width: 100%;
