--- a/src/app/views/pages/panel/layouts/team-members/teammembers.scss
+++ b/src/app/views/pages/panel/layouts/team-members/teammembers.scss
@@ -36,7 +36,7 @@ main.team-members {
   .right {
     height: 100%;
     margin-left: 0;
-    overflow-y: auto;
+    // overflow-y: auto;
     .card {
       margin-bottom: 12px;
     }
